# rdkservices-interface

./: CMakeLists.txt  README.md  RdkSrvController.cpp  RdkSrvController.h  WSClientconnectionmetadata.cpp  WSClientconnectionmetadata.h  WSClientwebsocketendpoint.h  rdkservices-cs-interface.bb
files/Controller/: RdkSrvController.cpp  RdkSrvController.h  WSClientconnectionmetadata.h  WSClientwebsocketendpoint.cpp  WSClientwebsocketendpoint.h
